test/corpus/corner-cases.test
==========
`<` at end
==========
<leader><
---
(map_side
  (keycode)
  (ERROR))

==========
`:` at end
==========
<key>s:
---
(map_side
  (keycode)
  (ERROR))

========================
: that ends without <cr>
========================
:IncRename
---
(ERROR
  (command))
