test/corpus/map-side.test
=======
keycode
=======
<f2>
---
(map_side
  (keycode))

=========================
keycode with ignored keys
=========================
<leader>[a
---
(map_side
  (keycode))

=========
<cmd> rhs
=========
<cmd>Format<cr>
---
(map_side
  (keycode)
  (command)
  (keycode))

===============
<cmd> with pipe
===============
<cmd>call CustomFunction() \| OtherCommand<CR>
---
(map_side
  (keycode)
  (command)
  (command)
  (keycode))

================
<cmd> with <bar>
================
<cmd>call CustomFunction() <bar> OtherCommand<CR>
---
(map_side
  (keycode)
  (command)
  (bar)
  (command)
  (keycode))

==============================
<cmd> with pipe for lua string
==============================
<cmd>tabnew | Git<cr>
---
(map_side
  (keycode)
  (command)
  (command)
  (keycode))

==================
: between keycodes
==================
<c-w><cr>:cclose<cr><c-w>T
---
(map_side
  (keycode)
  (keycode)
  (command)
  (keycode)
  (keycode))

===========
: with pipe
===========
:call CustomFunction() \| OtherCommand\|EventMoreCommands<CR>
---
(map_side
  (command)
  (command)
  (command)
  (keycode))

============
: with <bar>
============
:call CustomFunction() <Bar> OtherCommand<BAR>EventMoreCommands<CR>
---
(map_side
  (command)
  (bar)
  (command)
  (bar)
  (command)
  (keycode))

============
: with range
============
:'<,'>call CustomFunction() \| FormatWrite<CR>
---
(map_side
  (command)
  (command)
  (keycode))

============
: with <c-u>
============
:<C-U>normal! 0f(hviw<CR>
---
(map_side
  (keycode)
  (command)
  (keycode))

=====
:.lua
=====
:.lua<cr>
---
(map_side
  (command)
  (command)
  (keycode))

========
comments
========
<cmd>Format<cr>
" comment
" <- @punctuation.bracket
---
(map_side
  (keycode)
  (command)
  (keycode)
  (comment)
  (comment))
